// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should query clubs correctly 1`] = `
Object {
  "data": Object {
    "clubs": Array [
      Object {
        "address": "address",
        "contact": "contact",
        "description": "description",
        "email": "email",
        "link": "link",
        "name": "name",
        "region": "region",
        "specials": "specials",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`should query events correctly 1`] = `
Object {
  "data": Object {
    "events": Array [
      Object {
        "admissionFee": 10,
        "admissionFeeWithDiscount": 20,
        "amountOfFloors": 4,
        "club": Object {
          "id": 1,
          "name": "name",
        },
        "date": "date",
        "description": "description",
        "genres": Array [
          Object {
            "id": 1,
            "name": "genre1",
          },
        ],
        "imageUrl": "imageUrl",
        "minimumAge": 18,
        "name": "name",
        "priceCategory": 2,
        "special": "specials",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`should query existing club correctly 1`] = `
Object {
  "data": Object {
    "club": Object {
      "address": "address",
      "contact": "contact",
      "description": "description",
      "email": "email",
      "link": "link",
      "name": "name",
      "region": "region",
      "specials": "specials",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`should query existing event correctly 1`] = `
Object {
  "data": Object {
    "event": Object {
      "admissionFee": 10,
      "admissionFeeWithDiscount": 20,
      "amountOfFloors": 4,
      "club": Object {
        "id": 1,
        "name": "name",
      },
      "date": "date",
      "description": "description",
      "genres": Array [
        Object {
          "id": 1,
          "name": "genre1",
        },
      ],
      "imageUrl": "imageUrl",
      "minimumAge": 18,
      "name": "name",
      "priceCategory": 2,
      "special": "specials",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`should query genres correctly 1`] = `
Object {
  "data": Object {
    "genres": Array [
      Object {
        "id": 1,
        "name": "genre1",
      },
      Object {
        "id": 2,
        "name": "genre2",
      },
      Object {
        "id": 3,
        "name": "genre3",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
